Fix - When screen size is made small, the top nav bar is overflowed.
Currently only bar is fixed. Content is still overflowing.

--- a/MvcWebRole1/Content/styles/top-nav.css
+++ b/MvcWebRole1/Content/styles/top-nav.css
@@ -15,6 +15,7 @@
             list-style: none;
             padding: 5px;
             padding-bottom: 5px;
+            max-height: 30px;
         }
 
             ul.top-nav-bar li {
